--- a/httpclientlib/build.gradle
+++ b/httpclientlib/build.gradle
@@ -21,13 +21,28 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             jniDebuggable true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn clearJar, makeJar
+    }
+}
+
+task clearJar(type: Delete) {
+    delete 'build/outputs/jar/HttpClient.jar'
+}
+
+task makeJar(type: Copy) {
+    from('build/intermediates/bundles/release/')
+    into('build/outputs/jar/')
+    include('classes.jar')
+    rename ('classes.jar', 'HttpClient.jar')
 }
 
 dependencies {
